2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* (gnulib): Run gnulib --add-import.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\begindoublecolumns): Remove \global 
	qualifier from an assignment to \vsize.
	(\enddoublecolumns): Some comments updated to reflect the fact 
	that \balancecolumns now saves its output in a box.

2015-12-19  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi) <misc commands>: If command
	@indent or @noindent is seen, start a new paragraph after the 
	spaces following the command.
	(_merge_text): Don't merge text into an 
	empty_spaces_after_command element.
	(Problem with starting a paragraph with an @image reported by 
	Per Bothner.)

	Changes to results of tests:
	* tp/t/macro.t (unknown_macro_in_line_command): Non-whitespace 
	text is not adjoined to empty spaces element.
	* tp/t/xml_tests.t (comments_on_misc_command_line): Comment 
	after @indent is inside a paragraph.

2015-12-17  Gavin Smith  <gavinsmith0123@gmail.com>

	Suppress chapter titles for single-page indices.

	* doc/texinfo.tex (\savemarks, \restoremarks): New \def's, split 
	out from \begindoublecolumns.
	(\begindoublecolumns): Use them.
	(\balancecolumns): Instead of outputting page so far, save it in 
	a box.
	(\enddoublecolumns): Use \savemarks inside output routine 
	followed by \restoremarks outside, before adding the box that 
	\balancecolumns saved.
	(\onepageout): Use \topmark to get chapter title on previous 
	page and \firstmark to get chapter title on current page.
	(\domark): Comments changed.

2015-12-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/texinfo.tex (\math): If in math mode, do nothing, so
	nested @math work.

2015-12-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* install-info/tests/ii-0058-test: Remove test, because empty 
	dir file is already covered by ii-0018-test and ii-0019-test.
	* install-info/tests/ii-0018-test,