@@ -540,6 +540,7 @@ display_update_node_text (WINDOW *win)
   mbi_avail (iter);
   while (1)
     {
+      int delim = 0;
       mbi_copy (&bol_iter, &iter);
       bol_ref_index = ref_index;
       bol_match_index = match_index;
@@ -551,7 +552,6 @@ start_of_line:
 
       text_buffer_reset (&tb_printed_line);
 
-      int delim = 0;
       /* Check if we have processed all the lines in the window. */
       if (pl_num == win->height)
         break;
